# SimVP-Simpler-yet-Better-Video-Prediction

./: README.md  exp.py  main.py  pyproject.toml
API/: dataloader.py  dataloader_image_list.py  metrics.py
data/image_list/data/: train_list_x.txt  train_list_xt.txt
